It's Time To Sleep ;)

--- a/Plutonium/Plutonium.vcxproj.filters
+++ b/Plutonium/Plutonium.vcxproj.filters
@@ -31,5 +31,8 @@
     <ClInclude Include="Finder.h">
       <Filter>Private</Filter>
     </ClInclude>
+    <ClInclude Include="Patterns.h">
+      <Filter>Private</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
